--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -9,7 +9,7 @@
               <a href="#">
                 <span class="fa-stack fa-lg">
                   
-                  <i class="fa fa-instagram fa-2x fa-inverse"></i>
+                  <span id='clickableAwesomeFont'><i class="fa fa-github fa-2x fa-inverse"></i></span>
                 </span>
               </a>
             </li>
