--- a/src/templates/scripts.html
+++ b/src/templates/scripts.html
@@ -15,3 +15,10 @@
 <script src="{% static 'js/highlight.pack.js' %}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
+
+<script>
+document.getElementById("clickableAwesomeFont").addEventListener("click", openLink);
+function openLink() {
+  window.open('https://github.com/case112/portfolio');
+}
+</script>
