--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="page-heading">
+        <div class="site-heading">
           <h1>{{ obj.heading|upper }}</h1>
           <h2 class="subheading">{{ obj.subheading }}</h2>
         </div>
