Updated index and requriements

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -93,7 +93,7 @@
 
 <!-- Instagram feed -->
 <div class="container">
-    <center><h3 class="h4"><i class="fab fa-instagram"></i> insta</h3></center>
+    <center><h1><i class="fab fa-instagram"></i></h1></center>
     <div class="row">
     {% instagram_user_recent_media instagram_profile_name %}
     
